<resources>
    <string name="app_name">My Application</string>
    <string name="herore_name">Herore Name</string>
    <string name="categoria_heroe">Categoria Heroe</string>
    <string name="posicion">Support</string>
    <string name="descripcion">Descripcion</string>
    <string name="url_image">Imagen (url)</string>
    <string name="guardar">Guardar</string>
    <string name="update_tittle_button">Modificar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_heroe">Modificar Heroe</string>
</resources>
