<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dimen10"
    tools:context=".view.fragments.DetailHeroeFragment">

    <TextView
        android:id="@+id/nombreHeroeTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/herore_name" />

    <TextView
            android:id="@+id/categorieHeroreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombreHeroeTextView"
        android:layout_marginTop="@dimen/dimen10"
        android:text="@string/categoria_heroe" />

    <TextView
        android:id="@+id/tipoHeroe"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posicion"/>

    <ImageView
        android:id="@+id/imageHeroeImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/categorieHeroreTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen10"
        android:maxWidth="@dimen/maxSize200"
        android:maxHeight="@dimen/maxSize200" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10"
        android:layout_below="@+id/imageHeroeImageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/descripcion" />

</RelativeLayout>